Enforce statement authorization after route resolution